Added Ifluentemail. Compelted SendEmail method. Some changes to email Subject and Body

--- a/PAM/Emails/ReviewResult.Body.cshtml
+++ b/PAM/Emails/ReviewResult.Body.cshtml
@@ -1,4 +1,4 @@
-﻿<p>A system registration request is waiting for your review:</p>
+﻿<p>Your system registration request has been reviewed:</p>
 
 <table>
     <tr><th>Request Type</th><td>@Model.Request.RequestType.DisplayCode</td></tr>
