--- a/PAM/Emails/ReviewResult.Subject.cshtml
+++ b/PAM/Emails/ReviewResult.Subject.cshtml
@@ -1,1 +1,1 @@
-﻿System Registration Request @Model.Request.RequestId is Waiting for Your Review
+﻿Your System Registration Request @Model.Request.RequestId has been Reviewed
