Code cleanup and reorganization (more to come)
. Split style.css
. Simplified styling
. Split NewRequest to make it easier to support different request processes.
. Tried to standardize CRUD in data services.
. Re-worked Portfolio Assignment workflow.
. Some minor model changes.
. Fixed some problems in views.
. Use Razor section to customize CSS & JavaScript on different pages.

--- a/PAM/Views/Request/AllRequests.cshtml
+++ b/PAM/Views/Request/AllRequests.cshtml
@@ -36,7 +36,7 @@
         <tbody>
           @foreach (var request in (List<Request>)ViewData["requests"])
           {
-            @if (request.RequestStatus == RequestStatus.PendingReview)
+            @if (request.RequestStatus == RequestStatus.UnderReview)
             {
               <tr>
                 <td>@request.RequestId</td>
