--- a/PAM/Views/Shared/_LoginLayout.cshtml
+++ b/PAM/Views/Shared/_LoginLayout.cshtml
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="~/lib/bootswatch/cerulean/bootstrap.min.css" />
-  <link rel="stylesheet" href="~/css/styles.css">
+  <link rel="stylesheet" href="~/css/login.css">
   <title>PAM - @ViewBag.Title</title>
 </head>
 <body>
