--- a/PAM/Views/Shared/_Layout.cshtml
+++ b/PAM/Views/Shared/_Layout.cshtml
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="~/lib/bootswatch/cerulean/bootstrap.min.css" />
+  <link rel="stylesheet" href="~/lib/bootswatch/cerulean/bootstrap.min.css">
+  <link rel="stylesheet" href="~/lib/font-awesome-5-css/css/all.min.css">
   <link rel="stylesheet" href="~/css/styles.css">
   @RenderSection("StyleSheets", required: false)
   <title>PAM - @ViewData["Title"]</title>
@@ -21,10 +22,11 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="requestsMenu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Requests</a>
           <div class="dropdown-menu" aria-labeledby="requestsMenu">
-            <a class="dropdown-item" href="/Request/Self">Your Requests</a>
-            <a class="dropdown-item" href="/Request/ReviewRequests">Review Requests</a>
-            <a class="dropdown-item" href="/Request/ProcessRequests">Process Requests</a>
-            <a class="dropdown-item" href="/Request/AllRequests">All Requests</a>
+            <a class="dropdown-item" asp-controller="Request" asp-action="MyRequests">My Requests</a>
+            <a class="dropdown-item" asp-controller="Request" asp-action="ReviewRequests">Review Requests</a>
+            <a class="dropdown-item" asp-controller="Request" asp-action="ProcessRequests">Process Requests</a>
+            <a class="dropdown-item" asp-controller="Request" asp-action="AllRequests">All Requests</a>
+            <a class="dropdown-item" asp-controller="NewRequest" asp-action="CreateRequest">New Request</a>
           </div>
         </li>
         <li class="nav-item">
@@ -36,10 +38,10 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="organizationMenu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Organization</a>
           <div class="dropdown-menu" aria-labeledby="navDropDownMenu">
-            <a asp-controller="Location" asp-action="Locations" class="dropdown-item">Locations</a>
-            <a asp-controller="Bureau" asp-action="Bureaus" class="dropdown-item">Bureaus</a>
-            <a asp-controller="Unit" asp-action="SelectUnit" class="dropdown-item">Units</a>
-            <a asp-controller="System" asp-action="Systems" class="dropdown-item">Systems</a>
+            <a class="dropdown-item" asp-controller="Location" asp-action="Locations">Locations</a>
+            <a class="dropdown-item" asp-controller="Bureau" asp-action="Bureaus">Bureaus</a>
+            <a class="dropdown-item" asp-controller="Unit" asp-action="SelectUnit">Units</a>
+            <a class="dropdown-item" asp-controller="System" asp-action="Systems">Systems</a>
           </div>
         </li>
         <li class="nav-item">
