--- a/PAM/Emails/ReviewResult.Subject.cshtml
+++ b/PAM/Emails/ReviewResult.Subject.cshtml
@@ -1,1 +1,1 @@
-﻿Your System Registration Request @Model.Request.RequestId has been Reviewed
+﻿Your System Registration Request ID# @Model.Request.SubmittedOn.Year-@Model.Request.RequestId has been Reviewed
