Link to Review Request formatted to work

--- a/PAM/Emails/ReviewRequest.Body.cshtml
+++ b/PAM/Emails/ReviewRequest.Body.cshtml
@@ -6,6 +6,6 @@
     <tr><th>Submitted On</th><td>@Model.Request.SubmittedOn</td></tr>
 </table>
 
-<p>You may access the details of the request at @Model.AppUrl/Requests/@Model.Request.RequestId</p>
+<p>You may access the details of the request at @Model.AppUrl/Request/RequestForReview?reqId=@Model.Request.RequestId</p>
 
 PAM Admin
