--- a/PAM/Views/Request/AllRequests.cshtml
+++ b/PAM/Views/Request/AllRequests.cshtml
@@ -40,7 +40,7 @@
             {
               <tr>
                 <td>@request.RequestId</td>
-                <td>@request.Name</td>
+                <td>@request.RequestedFor.Name</td>
                 <td>@request.RequestType.DisplayCode</td>
                 <td>@request.SubmittedOn</td>
                 <td>@request.RequestStatus</td>
@@ -72,7 +72,7 @@
           {
             <tr>
               <td>@request.RequestId</td>
-              <td>@request.Name</td>
+              <td>@request.RequestedFor.Name</td>
               <td>@request.RequestType.DisplayCode</td>
               <td>@request.SubmittedOn</td>
               <td>@request.RequestStatus</td>
@@ -105,7 +105,7 @@
             {
               <tr>
                 <td>@request.RequestId</td>
-                <td>@request.Name</td>
+                <td>@request.RequestedFor.Name</td>
                 <td>@request.RequestType.DisplayCode</td>
                 <td>@request.SubmittedOn</td>
                 <td>@request.RequestStatus</td>
