--- a/PAM/Views/Shared/_ProgressBar1.cshtml
+++ b/PAM/Views/Shared/_ProgressBar1.cshtml
@@ -1,12 +1,21 @@
 ﻿@* This is the progress bar for portfolio requests.*@
 <div class="progressbar-container">
   <ul class="progressbar">
-    <li class="step" data-title="Requester Information"><a class="d-none d-md-inline" asp-action="RequesterInfo">Requester Information</a></li>
-    <li class="step" data-title="Unit Selection"><a class="d-none d-md-inline" asp-action="SelectUnit">Unit Selection</a></li>
-    <li class="step" data-title="Select Systems"><a class="d-none d-md-inline" asp-action="SelectSystems">System Selection</a></li>
-    <li class="step" data-title="Additional Info"><a class="d-none d-md-inline" asp-action="AdditionalInfo">Additional Information</a></li>
-    <li class="step" data-title="Approvers"><a class="d-none d-md-inline" asp-action="Reviewers">Signature(s)</a></li>
-    <li class="step" data-title="Summary"><a class="d-none d-md-inline" asp-action="Summary">Summary</a></li>
+    <li class="step" data-title="Requester Information">
+      <a class="d-none d-md-inline" asp-action="RequesterInfo" asp-route-id="@ViewData["id"]">Requester Information</a>
+    </li>
+    <li class="step" data-title="Unit Selection">
+      <a class="d-none d-md-inline" asp-action="UnitSelection" asp-route-id="@ViewData["id"]">Unit/Job Function Selection</a>
+    </li>
+    <li class="step" data-title="Additional Information">
+      <a class="d-none d-md-inline" asp-action="AdditionalInfo" asp-route-id="@ViewData["id"]">Additional Information</a>
+    </li>
+    <li class="step" data-title="Signatures">
+      <a class="d-none d-md-inline" asp-action="Signatures" asp-route-id="@ViewData["id"]">Signature(s)</a>
+    </li>
+    <li class="step" data-title="Summary">
+      <a class="d-none d-md-inline" asp-action="Summary" asp-route-id="@ViewData["id"]">Summary</a>
+    </li>
   </ul>
 </div>
 <hr>
