Removed uneeded code

--- a/PAM/Views/Request/CreateRequest.cshtml
+++ b/PAM/Views/Request/CreateRequest.cshtml
@@ -43,7 +43,7 @@
   </ol>
 </nav>
 
-<form asp-controller="NewRequest" asp-action="NewRequest" method="post">
+<form method="post">
 
   <p>Is this request for yourself?</p>
   <div class="form-group">
