added viewing for under review requests

--- a/PAM/Views/Request/CreateRequest.cshtml
+++ b/PAM/Views/Request/CreateRequest.cshtml
@@ -43,7 +43,7 @@
   </ol>
 </nav>
 
-<form asp-controller="NewRequest" asp-action="NewRequest" method="post">
+<form method="post">
 
   <p>Is this request for yourself?</p>
   <div class="form-group">
@@ -91,7 +91,7 @@
     </div>
 
   <div class="form-group">
-    <button type="submit" class="btn btn-primary">Create Reqeust</button>
+    <button type="submit" class="btn btn-primary">Create Request</button>
   </div>
 
 </form>
