--- a/PAM/Views/Request/MyRequests.cshtml
+++ b/PAM/Views/Request/MyRequests.cshtml
@@ -67,7 +67,10 @@
                 <td>@request.RequestType.DisplayCode</td>
                 <td>@request.SubmittedOn</td>
                 <td>
-                  <a asp-action="View">View</a>
+                  <a asp-action="ViewRequest" asp-route-id="@request.RequestId">
+                    <i class="fas fa-eye"></i>
+                    <span class="d-none d-md-inline">View</span>
+                  </a>
                 </td>
               </tr>
             }
@@ -98,7 +101,10 @@
                 <td>@request.SubmittedOn</td>
                 <td>@request.CompletedOn</td>
                 <td>
-                  <a asp-action="View">View</a>
+                  <a asp-action="ViewRequest" asp-route-id="@request.RequestId">
+                    <i class="fas fa-eye"></i>
+                    <span class="d-none d-md-inline">View</span>
+                  </a>
                 </td>
               </tr>
             }
