--- a/PAM/Views/Review/MyReviews.cshtml
+++ b/PAM/Views/Review/MyReviews.cshtml
@@ -6,8 +6,8 @@
 }
 
 <nav aria-label="breadcrumb">
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item active" aria-current="page">Review Requests</li>
+  <ol class="breadcrumb bg-info">
+    <li class="breadcrumb-item active text-white" aria-current="page">Review Requests</li>
   </ol>
 </nav>
 
