--- a/PAM/Views/EditPortfolioRequest/RequesterInfo.cshtml
+++ b/PAM/Views/EditPortfolioRequest/RequesterInfo.cshtml
@@ -17,9 +17,9 @@
 }
 
 <nav aria-label="breadcrumb">
-  <ol class="breadcrumb">
+  <ol class="breadcrumb bg-info">
     <li class="breadcrumb-item"><a asp-controller="Request" asp-action="MyRequests">My Requests</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Request #@ViewData["id"]</li>
+    <li class="breadcrumb-item active text-white" aria-current="page">Request #@ViewData["id"]</li>
   </ol>
 </nav>
 
