--- a/PAM/Views/Request/MyRequests.cshtml
+++ b/PAM/Views/Request/MyRequests.cshtml
@@ -7,8 +7,8 @@
 }
 
 <nav aria-label="breadcrumb">
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item active" aria-current="page">My Requests</li>
+  <ol class="breadcrumb bg-info ">
+    <li class="breadcrumb-item active text-white" aria-current="page">My Requests</li>
   </ol>
 </nav>
 
