--- a/PAM/Views/Request/ViewRequest.cshtml
+++ b/PAM/Views/Request/ViewRequest.cshtml
@@ -11,7 +11,7 @@
   </div>
 </div>
 <div class="card">
-  <div class="card-header">Request Information</div>
+  <div class="card-header bg-info text-white">Request Information</div>
   <div class="card-body">
     <div class="row">
       <div class="form-group col-md-6">
@@ -36,7 +36,7 @@
 </div>
 
 <div class="card">
-  <div class="card-header">
+  <div class="card-header bg-info text-white">
     Requester Information
   </div>
   <div class="card-body">
@@ -104,7 +104,7 @@
 </div>
 
 <div class="card">
-  <div class="card-header">
+  <div class="card-header bg-info text-white">
     Systems Requested
   </div>
   <div class="card-body">
@@ -145,7 +145,7 @@
 </div>
 
 <div class="card">
-  <div class="card-header">
+  <div class="card-header bg-info text-white">
     Additional Information
   </div>
   <div class="card-body">
@@ -202,7 +202,7 @@
 </div>
 
 <div class="card">
-  <div class="card-header">
+  <div class="card-header bg-info text-white">
     Signature(s) Required
   </div>
   <div class="card-body">
