--- a/PAM/Views/Review/EditReview.cshtml
+++ b/PAM/Views/Review/EditReview.cshtml
@@ -6,14 +6,14 @@
 }
 
 <nav aria-label="breadcrumb">
-  <ol class="breadcrumb">
+  <ol class="breadcrumb bg-info">
     <li class="breadcrumb-item"><a asp-controller="Review" asp-action="MyReviews">Review Requests</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Request #@request.RequestId</li>
+    <li class="breadcrumb-item active text-white" aria-current="page">Request #@request.RequestId</li>
   </ol>
 </nav>
 
 <div class="card">
-  <div class="card-header">Request Information</div>
+  <div class="card-header bg-info text-white">Request Information</div>
   <div class="card-body">
     <div class="row">
       <div class="form-group col-md-6">
@@ -38,7 +38,7 @@
 </div>
 
 <div class="card">
-  <div class="card-header">Requester Information</div>
+  <div class="card-header bg-info text-white">Requester Information</div>
   <div class="card-body">
     <div class="row">
       <div class="form-group col-md-6">
@@ -104,7 +104,7 @@
 </div>
 
 <div class="card">
-  <div class="card-header">Systems Requested</div>
+  <div class="card-header bg-info text-white">Systems Requested</div>
   <div class="card-body">
     <div class="row">
       <div class="form-group col-md-6">
@@ -143,7 +143,7 @@
 </div>
 
 <div class="card">
-  <div class="card-header">Additional Information</div>
+  <div class="card-header bg-info text-white">Additional Information</div>
   <div class="card-body">
     <div class="row mb-2">
       <div class="col-md-4">
@@ -199,7 +199,7 @@
 
 <form id="decision" method="post">
   <div class="card mt-5">
-    <div class="card-header">Your Decision</div>
+    <div class="card-header bg-info text-white">Your Decision</div>
     <div class="card-body">
       <div class="form-group">
         <label for="comments">Comments (required for denying a request)</label>
