--- a/PAM/Views/Shared/_Layout.cshtml
+++ b/PAM/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" asp-controller="Account" asp-action="Logout">Logout</a>
+          <a class="nav-link" href="javascript:confirmLogout()">Logout</a>
         </li>
       </ul>
       <span style="color:white;" class="d-none d-lg-inline">Welcome, @identity.GetClaim(ClaimTypes.GivenName) @identity.GetClaim(ClaimTypes.Surname)!</span>
@@ -62,6 +62,13 @@
   <!-- Scripts -->
   <script src="~/lib/jquery/jquery.min.js"></script>
   <script src="~/lib/twitter-bootstrap/js/bootstrap.min.js"></script>
+    <script>
+      function confirmLogout() {
+        var msg = "Are you sure you want to logout?";
+        if (confirm(msg))
+          window.location.href = "/Account/Logout/";
+      }
+    </script>
   @RenderSection("Scripts", required: false)
 </body>
 </html>
