--- a/PAM/wwwroot/css/login.css
+++ b/PAM/wwwroot/css/login.css
@@ -2,10 +2,11 @@
     [ Background for Login ]
 */
 body {
-  background-color: #19547b;
+  background: linear-gradient(to right, #19447b 0%, #9da0a4 50%, #19447b 100%);
+  background: -webkit-linear-gradient(to right, #19447b 0%, #9da0a4 50%, #19447b 100%);
 }
+
 .bg-display {
-  background-image: url("../Images/losangeles.jpg");
   width: 100%;
   min-height: 100vh;
   justify-content: flex-end;
@@ -73,6 +74,6 @@ body {
   padding: 0 5px 0 5px;
 }
 
-.input-edit::placeholder {
-  color: white;
-}
+  .input-edit::placeholder {
+    color: white;
+  }
